Networking/files/Service Mesh/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: default
      securityContext:
        runAsUser: 0
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
#        command: ['sh', '-c', '/usr/bin/python3 usr/local/bin/gunicorn -b 0.0.0.0:8000 httpbin:app -k gevent']
        name: httpbin
        ports:
        - containerPort: 80
